Horizontal scroll bar issue (#1802)

--- a/src/pages/EnterpriseShared/index.less
+++ b/src/pages/EnterpriseShared/index.less
@@ -452,6 +452,14 @@
       width: 100%;
       overflow-x: auto !important;
       overflow-y: hidden !important;
+      scrollbar-width: none;
+      -ms-overflow-style: none;
+    }
+
+    .ant-tabs-nav-container::-webkit-scrollbar {
+      width: 0;
+      height: 0;
+      display: none;
     }
   }
 
